fold draw function into ship object. Fix display of images outside of canvas.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <script src="js/jquery-1.11.1.js"></script>
 </head>
 <body>
-  <img id="ship" src="images/ship_6.png" alt="Player Ship"
-width="50" height="50">
+  <img id="ship" src="images/ship_6.png" alt="Player Ship">
+  <img id="explosion" src="images/graphics-explosions-210621.gif">
   <canvas id="canvas"></canvas>
   <script src="js/spacewars.js"></script>
 </body>
