--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <script src="js/jquery-1.11.1.js"></script>
 </head>
 <body>
-  <img id="ship" src="images/ship_6.png" alt="Player Ship">
+  <img id="ship" src="images/ship_8.png" alt="Player Ship" width="200" height="200">
   <img id="explosion" src="images/graphics-explosions-210621.gif">
   <canvas id="canvas"></canvas>
   <script src="js/spacewars.js"></script>
 </body>
 </html>
-
