--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <img id="ship" src="images/ship_8.png" alt="Player Ship" width="200" height="200">
-  <img id="explosion" src="images/graphics-explosions-210621.gif">
+  <img id="starfield" src="images/starfield.png" alt="Starfield" width="800" height="600">
   <canvas id="canvas"></canvas>
   <script src="js/spacewars.js"></script>
 </body>
