--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <img id="ship" src="images/ship_8.png" alt="Player Ship" width="200" height="200">
   <canvas id="canvas"></canvas>
   <script src="js/spacewars.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
 </body>
 </html>
