--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <img id="ship" src="images/ship_8.png" alt="Player Ship" width="200" height="200">
   <canvas id="canvas"></canvas>
   <script src="js/spacewars.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
   <script>
     var socket = io();
   </script>
