add server communication to client.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
   <script>
     var socket = io();
+    socket.on('server message', function(msg){
+      console.log('Server message: ' + msg);
+    });
   </script>
 </body>
 </html>
