add collsion tests. add some explosion images. add explosion timer vars. add image specify for ship objects in frame transmit.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <img id="ship" src="images/ship_8.png" alt="Player Ship" width="200" height="200">
+  <img id="explosion0" src="images/explosion_frames/explosion0.png" alt="explosion" width="200" height="200">
+  <img id="explosion1" src="images/explosion_frames/explosion1.png" alt="explosion" width="200" height="200">
+  <img id="explosion2" src="images/explosion_frames/explosion2.png" alt="explosion" width="200" height="200">
   <canvas id="canvas"></canvas>
   <script src="js/spacewars.js"></script>
 </body>
