correct explosion images 0-3, add support for up to 16 explosion frames, fix explosion time bug, remove extraneous client code console.logs and files.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
 </head>
 <body>
   <img id="ship" src="images/ship_8.png" alt="Player Ship" width="200" height="200">
-  <img id="explosion0" src="images/explosion_frames/explosion0.png" alt="explosion" width="200" height="200">
-  <img id="explosion1" src="images/explosion_frames/explosion1.png" alt="explosion" width="200" height="200">
-  <img id="explosion2" src="images/explosion_frames/explosion2.png" alt="explosion" width="200" height="200">
+  <img id="shipExp0" src="images/explosion_frames/shipExp0.png" alt="explosion" width="200" height="200">
+  <img id="shipExp1" src="images/explosion_frames/shipExp1.png" alt="explosion" width="200" height="200">
+  <img id="shipExp2" src="images/explosion_frames/shipExp2.png" alt="explosion" width="200" height="200">
+  <img id="shipExp3" src="images/explosion_frames/shipExp3.png" alt="explosion" width="200" height="200">
+  <img id="shipExp4" src="images/explosion_frames/shipExp4.png" alt="explosion" width="200" height="200">
+  <img id="shipExp5" src="images/explosion_frames/shipExp5.png" alt="explosion" width="200" height="200">
+  <img id="shipExp6" src="images/explosion_frames/shipExp6.png" alt="explosion" width="200" height="200">
+  <img id="shipExp7" src="images/explosion_frames/shipExp7.png" alt="explosion" width="200" height="200">
+  <img id="shipExp8" src="images/explosion_frames/shipExp8.png" alt="explosion" width="200" height="200">
+  <img id="shipExp9" src="images/explosion_frames/shipExp9.png" alt="explosion" width="200" height="200">
+  <img id="shipExp10" src="images/explosion_frames/shipExp10.png" alt="explosion" width="200" height="200">
+  <img id="shipExp11" src="images/explosion_frames/shipExp11.png" alt="explosion" width="200" height="200">
+  <img id="shipExp12" src="images/explosion_frames/shipExp12.png" alt="explosion" width="200" height="200">
+  <img id="shipExp13" src="images/explosion_frames/shipExp13.png" alt="explosion" width="200" height="200">
+  <img id="shipExp14" src="images/explosion_frames/shipExp14.png" alt="explosion" width="200" height="200">
+  <img id="shipExp15" src="images/explosion_frames/shipExp15.png" alt="explosion" width="200" height="200">
+  <img id="shipExp16" src="images/explosion_frames/shipExp16.png" alt="explosion" width="200" height="200">
+  <img id="shipExp17" src="images/explosion_frames/shipExp17.png" alt="explosion" width="200" height="200">
   <canvas id="canvas"></canvas>
   <script src="js/spacewars.js"></script>
 </body>
